force-app/main/default/objects/Dialpad__Dialpad_LOAC__c/Dialpad__Dialpad_LOAC__c.object-meta.xml
<CustomObject>
    <label>Dialpad LOAC</label>
    <nameField>
        <label>Dialpad_LOAC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dialpad LOAC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>