force-app/main/default/objects/Dialpad__Dialpad_LOAC__c/fields/Dialpad__isDeleted__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__isDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDeleted</label>
    <type>Checkbox</type>
</CustomField>