force-app/main/default/objects/Dialpad__Dialpad_LOAC__c/fields/Dialpad__isExcluded__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__isExcluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isExcluded</label>
    <type>Checkbox</type>
</CustomField>