force-app/main/default/objects/Dialpad__Dialpad_LOAC__c/fields/Dialpad__Next_call_date__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Next_call_date__c</fullName>
    <label>Next call date</label>
    <type>DateTime</type>
</CustomField>