force-app/main/default/objects/Dialpad__Dialpad_LOAC__c/fields/Dialpad__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Dialpad_LOAC</relationshipName>
    <type>Lookup</type>
</CustomField>