force-app/main/default/objects/Dialpad__Dialpad_LOAC__c/fields/Dialpad__Remaining_Call_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Remaining_Call_Attempts__c</fullName>
    <formula>Dialpad__Dialpad_List_Lookup__r.Dialpad__Dialpad_Dialing_Limit__c -  Dialpad__Dialpad_Times_Dialed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Call Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>