force-app/main/default/objects/Dialpad__Dialpad_LOAC__c/listViews/Dialpad__All.listView-meta.xml
<ListView>
    <fullName>Dialpad__All</fullName>
    <columns>NAME</columns>
    <columns>Dialpad__Account__c</columns>
    <columns>Dialpad__Dialpad_Times_Dialed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>